design: prevent screen stretching on mobile by removing negative margins and vw widths

--- a/src/index.css
+++ b/src/index.css
@@ -112,7 +112,7 @@ h1, h2, h3, h4, h5, h6 {
 .app-container {
   display: flex;
   min-height: 100vh;
-  width: 100vw;
+  width: 100%;
 }
 
 /* Sidebar on Desktop */
@@ -806,11 +806,11 @@ h1, h2, h3, h4, h5, h6 {
     padding-bottom: 8px;
     margin-bottom: 20px;
     -webkit-overflow-scrolling: touch;
-    width: calc(100% + 48px);
-    margin-left: -24px;
-    margin-right: -24px;
-    padding-left: 24px;
-    padding-right: 24px;
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 0;
+    padding-right: 0;
   }
   .pill-filter-bar::-webkit-scrollbar {
     display: none;
